# fead

./: .gitignore  Cargo.toml  README.md
src/: app.rs  entries.rs  event.rs  feeds.rs  fetch.rs  handler.rs  lib.rs  main.rs  reader.rs  screen.rs  tts.rs  tui.rs  ui.rs
src/feed/: entries.rs  feeds.rs  fetch.rs  mod.rs  reader.rs
src/handler/: confirmation.rs  editing.rs  feed_actions.rs  mod.rs  navigation.rs  normal.rs  tts.rs
src/tts/: mod.rs  model.rs  narration.rs  text.rs
