[package]
name = "fead"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
htmd = "0.1.6"
htmlentity = "1.3.2"
quick-xml = "0.37.1"
ratatui = "0.29.0"
reqwest = "0.12"
serde = { version = "1.0.208", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.127"
tokio = { version = "1", features = ["full"] }
tui-input = "0.11.1"
tui-markdown = "0.3.1"
